++++
News
++++

.. contents:: Contents:
   :backlinks: none

.. _start:

SQLObject (trunk)
=================

SQLObject 1.3.1
===============

* A bugfix was ported from `SQLObject 1.2.3`_.

SQLObject 1.3.0
===============

Released 31 Mar 2012.

Features & Interface
--------------------

* PostgresConnection performs translation of exceptions to standard
  SQLObject's hierarchy of exceptions.

* Major update of FirebirdConnection: introspection was completely
  rewritten and extended; ``charset`` was renamed to ``dbEncoding``;
  a longstanding bug was fixed - pass port to connect().

SQLObject 1.2.3
===============

* Fixed a minor bug in PostgreSQL introspection: VIEWs don't have
  PRIMARY KEYs - use sqlmeta.idName as the key if there is no one.

SQLObject 1.2.2
===============

Released 1 Mar 2012.

* A bugfix was ported from `SQLObject 1.1.5`_.

SQLObject 1.2.1
===============

Released 4 Dec 2011.

* A bugfix was ported from `SQLObject 1.1.4`_.

SQLObject 1.2.0
===============

Released 20 Nov 2011.

Features & Interface
--------------------

* Strings are treated specially in Select to allow
  Select(['id, 'name'], where='value = 42'). Update allows a string in
  WHERE.

* ForeignKey('Table', refColumn='refcol_id') to allow ForeignKey to
  point to a non-id column; the referred column must be a unique integer
  column.

* delColumn now accepts a ForeignKey's name without 'ID'.

* Support for PostgreSQL 7.* is dropped. The minimal supported version of
  PostgreSQL is 8.1 now.

* Quoting rules changed for PostgreSQL: SQLObject uses E'' escape string
  if the string contains characters escaped with backslash.

* A bug caused by psycopg2 recently added a new boolean not callable
  autocommit attribute was fixed.

* sqlobject.__doc__ and main.__doc__ no longer contain version number.
  Use sqlobject.version or version_info.

SQLObject 1.1.5
===============

Released 1 Mar 2012.

* A bug was fixed in SQLiteConnection - clear _threadPool on close().

SQLObject 1.1.4